--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "keywords": [],
   "devDependencies": {
     "jest": "^29.1.2"
+  },
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "express": "^4.18.1",
+    "mysql": "^2.18.1"
   }
 }
